kubernetes/apps/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: saradomin
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:latest
          ports:
            - containerPort: 9696
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 384Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: torrentio
              mountPath: /config/Definitions/Custom/torrentio.yml
              subPath: torrentio.yml
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: torrentio
          configMap:
            name: prowlarr-torrentio
